Refactored buttonPressed IBAction

--- a/Retinentia-IB/Base.lproj/Main.storyboard
+++ b/Retinentia-IB/Base.lproj/Main.storyboard
@@ -70,7 +70,7 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ViX-1a-zCV">
                                                 <rect key="frame" x="0.0" y="0.0" width="344.66666666666669" height="108"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ujv-b9-bzu">
+                                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ujv-b9-bzu">
                                                         <rect key="frame" x="0.0" y="0.0" width="108.33333333333333" height="108"/>
                                                         <color key="backgroundColor" red="0.65933212129999996" green="0.2383900722" blue="0.64405913130000003" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
@@ -82,10 +82,10 @@
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
                                                         <connections>
-                                                            <action selector="buttonOnePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wNC-a4-UGE"/>
+                                                            <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LLH-WO-fQC"/>
                                                         </connections>
                                                     </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yHw-rN-g7e">
+                                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yHw-rN-g7e">
                                                         <rect key="frame" x="118.33333333333331" y="0.0" width="108" height="108"/>
                                                         <color key="backgroundColor" red="0.6588235294117647" green="0.23921568627450979" blue="0.64313725490196072" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
@@ -97,10 +97,10 @@
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
                                                         <connections>
-                                                            <action selector="buttonTwoPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="coe-F7-uIQ"/>
+                                                            <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PfE-z2-MWz"/>
                                                         </connections>
                                                     </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lBX-oG-GII">
+                                                    <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lBX-oG-GII">
                                                         <rect key="frame" x="236.33333333333334" y="0.0" width="108.33333333333334" height="108"/>
                                                         <color key="backgroundColor" red="0.6588235294" green="0.23921568630000001" blue="0.64313725489999995" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
@@ -112,7 +112,7 @@
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
                                                         <connections>
-                                                            <action selector="buttonThreePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="a6H-Zg-r7A"/>
+                                                            <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BRj-sP-GOS"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
@@ -120,7 +120,7 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="EAf-bt-DJI">
                                                 <rect key="frame" x="0.0" y="118" width="344.66666666666669" height="108.33333333333331"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h1x-GV-4U3">
+                                                    <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h1x-GV-4U3">
                                                         <rect key="frame" x="0.0" y="0.0" width="108.33333333333333" height="108.33333333333333"/>
                                                         <color key="backgroundColor" red="0.6588235294" green="0.23921568630000001" blue="0.64313725489999995" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
@@ -132,10 +132,10 @@
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
                                                         <connections>
-                                                            <action selector="buttonFourPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="des-z5-wg5"/>
+                                                            <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fxE-KI-ewK"/>
                                                         </connections>
                                                     </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kgy-le-CsY">
+                                                    <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kgy-le-CsY">
                                                         <rect key="frame" x="118.33333333333331" y="0.0" width="108" height="108.33333333333333"/>
                                                         <color key="backgroundColor" red="0.6588235294" green="0.23921568630000001" blue="0.64313725489999995" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
@@ -147,10 +147,10 @@
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
                                                         <connections>
-                                                            <action selector="buttonFivePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TKo-XK-i7A"/>
+                                                            <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SOs-V8-auX"/>
                                                         </connections>
                                                     </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oke-kD-sYz">
+                                                    <button opaque="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oke-kD-sYz">
                                                         <rect key="frame" x="236.33333333333334" y="0.0" width="108.33333333333334" height="108.33333333333333"/>
                                                         <color key="backgroundColor" red="0.6588235294" green="0.23921568630000001" blue="0.64313725489999995" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
@@ -162,7 +162,7 @@
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
                                                         <connections>
-                                                            <action selector="buttonSixPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mB0-Rr-LRN"/>
+                                                            <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7cX-Qx-fiq"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
@@ -170,7 +170,7 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="GD6-Bf-mUX">
                                                 <rect key="frame" x="0.0" y="236.33333333333334" width="344.66666666666669" height="108.33333333333334"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="88N-97-Bz9">
+                                                    <button opaque="NO" tag="7" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="88N-97-Bz9">
                                                         <rect key="frame" x="0.0" y="0.0" width="108.33333333333333" height="108.33333333333333"/>
                                                         <color key="backgroundColor" red="0.6588235294" green="0.23921568630000001" blue="0.64313725489999995" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
@@ -182,10 +182,10 @@
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
                                                         <connections>
-                                                            <action selector="buttonSevenPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Fvo-MC-fB4"/>
+                                                            <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wnw-TF-9jz"/>
                                                         </connections>
                                                     </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="voi-AB-6dh">
+                                                    <button opaque="NO" tag="8" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="voi-AB-6dh">
                                                         <rect key="frame" x="118.33333333333331" y="0.0" width="108" height="108.33333333333333"/>
                                                         <color key="backgroundColor" red="0.6588235294" green="0.23921568630000001" blue="0.64313725489999995" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
@@ -197,10 +197,10 @@
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
                                                         <connections>
-                                                            <action selector="buttonEightPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Dxf-eB-Dp2"/>
+                                                            <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2qt-D4-WOf"/>
                                                         </connections>
                                                     </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gYa-ER-tUg">
+                                                    <button opaque="NO" tag="9" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gYa-ER-tUg">
                                                         <rect key="frame" x="236.33333333333334" y="0.0" width="108.33333333333334" height="108.33333333333333"/>
                                                         <color key="backgroundColor" red="0.6588235294" green="0.23921568630000001" blue="0.64313725489999995" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
@@ -212,7 +212,7 @@
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
                                                         <connections>
-                                                            <action selector="buttonNinePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6gj-th-dkU"/>
+                                                            <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4U7-7B-9e3"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
