Fixed animation error

--- a/Retinentia-IB/Base.lproj/Main.storyboard
+++ b/Retinentia-IB/Base.lproj/Main.storyboard
@@ -264,7 +264,7 @@
                         <outlet property="buttonFive" destination="Kgy-le-CsY" id="Ibz-p6-fls"/>
                         <outlet property="buttonFour" destination="h1x-GV-4U3" id="umH-ea-CoZ"/>
                         <outlet property="buttonNine" destination="gYa-ER-tUg" id="im1-xP-rcO"/>
-                        <outlet property="buttonOne" destination="ujv-b9-bzu" id="Ydj-TU-R3m"/>
+                        <outlet property="buttonOne" destination="ujv-b9-bzu" id="MMt-IO-v9c"/>
                         <outlet property="buttonSeven" destination="88N-97-Bz9" id="RFQ-aF-Aro"/>
                         <outlet property="buttonSix" destination="Oke-kD-sYz" id="05p-ox-OT2"/>
                         <outlet property="buttonThree" destination="lBX-oG-GII" id="nLm-db-0LM"/>
